--- a/actualites.html
+++ b/actualites.html
@@ -235,12 +235,12 @@
               <div class="custom-block custom-block-full">
                 <div class="custom-block-image-wrap">
                   <a
-                    href="images/infos/m1.png"
+                    href="images/activites/3.jpg"
                     class="custom-block-image-wrap"
                     target="_blank"
                   >
                     <img
-                      src="images/infos/m1.png"
+                      src="images/activites/3.jpg"
                       class="custom-block-image img-fluid"
                       alt=""
                     />
@@ -285,12 +285,12 @@
               <div class="custom-block custom-block-full">
                 <div class="custom-block-image-wrap">
                   <a
-                    href="images/infos/m1.png"
+                    href="images/actions/16.jpg"
                     class="custom-block-image-wrap"
                     target="_blank"
                   >
                     <img
-                      src="images/infos/m1.png"
+                      src="images/actions/16.jpg"
                       class="custom-block-image img-fluid"
                       alt=""
                     />
@@ -335,12 +335,12 @@
               <div class="custom-block custom-block-full">
                 <div class="custom-block-image-wrap">
                   <a
-                    href="images/infos/m1.png"
+                    href="images/actions/20.jpg"
                     class="custom-block-image-wrap"
                     target="_blank"
                   >
                     <img
-                      src="images/infos/m1.png"
+                      src="images/actions/20.jpg"
                       class="custom-block-image img-fluid"
                       alt=""
                     />
