--- a/activites.html
+++ b/activites.html
@@ -528,7 +528,7 @@
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/ctmseul.png"
+              src="images/logos/logopnm.jpg"
               alt="Image 6"
               class="img-fluid small-image"
             />
@@ -556,14 +556,21 @@
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/crpmem.png"
+              src="images/logos/mairie.png"
               alt="Image 5"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/mairie.png"
+              src="images/logos/dla.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/crpmem.png"
               alt="Image 6"
               class="img-fluid small-image"
             />
@@ -571,13 +578,6 @@
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="images/logos/efpma.png"
-              alt="Image 6"
-              class="img-fluid small-image"
-            />
-          </div>
-          <div class="col-lg-1 col-md-4 col-4">
-            <img
-              src="images/logos/dla.png"
               alt="Image 6"
               class="img-fluid small-image"
             />
@@ -598,7 +598,7 @@
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/dlaseul.png"
+              src="images/logos/ctmseul.png"
               alt="Image 6"
               class="img-fluid small-image"
             />
