--- a/privacy.html
+++ b/privacy.html
@@ -347,7 +347,7 @@
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
-            src="images/logos/ctmseul.png"
+            src="images/logos/logopnm.jpg"
             alt="Image 6"
             class="img-fluid small-image"
           />
@@ -375,14 +375,21 @@
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
-            src="images/logos/crpmem.png"
+            src="images/logos/mairie.png"
             alt="Image 5"
             class="img-fluid small-image"
           />
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
-            src="images/logos/mairie.png"
+            src="images/logos/dla.png"
+            alt="Image 6"
+            class="img-fluid small-image"
+          />
+        </div>
+        <div class="col-lg-1 col-md-4 col-4">
+          <img
+            src="images/logos/crpmem.png"
             alt="Image 6"
             class="img-fluid small-image"
           />
@@ -390,13 +397,6 @@
         <div class="col-lg-1 col-md-4 col-4">
           <img
             src="images/logos/efpma.png"
-            alt="Image 6"
-            class="img-fluid small-image"
-          />
-        </div>
-        <div class="col-lg-1 col-md-4 col-4">
-          <img
-            src="images/logos/dla.png"
             alt="Image 6"
             class="img-fluid small-image"
           />
@@ -417,7 +417,7 @@
         </div>
         <div class="col-lg-1 col-md-4 col-4">
           <img
-            src="images/logos/dlaseul.png"
+            src="images/logos/ctmseul.png"
             alt="Image 6"
             class="img-fluid small-image"
           />
@@ -492,7 +492,7 @@
           </p>
         </div>
         <!-- icones sociales -->
-        <div class="col-lg-5 col-md-9 col-12 ">
+        <div class="col-lg-5 col-md-9 col-12">
           <ul class="social-icon d-flex justify-content-center mb-2">
             <li class="social-icon-item">
               <a
