--- a/services.html
+++ b/services.html
@@ -114,8 +114,8 @@
                             </div>
 
                             <div class="owl-carousel-info-wrap item">
-                              <a href="images/services/3.jpg" class="custom-block-image-wrap" target="_blank">
-                                <img src="images/services/3.jpg"
+                              <a href="images/services/2.jpg" class="custom-block-image-wrap" target="_blank">
+                                <img src="images/services/2.jpg"
                                     class="owl-carousel-image img-fluid" alt=""></a>
                             </div>
 
@@ -126,8 +126,8 @@
                             </div>
 
                             <div class="owl-carousel-info-wrap item">
-                              <a href="images/services/5.jpg" class="custom-block-image-wrap" target="_blank">
-                                <img src="images/services/5.jpg"
+                              <a href="images/services/12.jpg" class="custom-block-image-wrap" target="_blank">
+                                <img src="images/services/12.jpg"
                                     class="owl-carousel-image img-fluid" alt=""></a>
                             </div>
 
@@ -348,205 +348,205 @@
     
     <!-- FOOTER -->
     <footer class="site-footer">
-        <!-- partenaires -->
-        <div class="container pb-2">
-          <div class="row">
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/copem.png"
-                alt="Image 1"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/ctmseul.png"
-                alt="Image 6"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/assomer.png"
-                alt="Image 2"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/capnord.png"
-                alt="Image 3"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/ctm.png"
-                alt="Image 4"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/crpmem.png"
-                alt="Image 5"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/mairie.png"
-                alt="Image 6"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/efpma.png"
-                alt="Image 6"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/dla.png"
-                alt="Image 6"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/dm.png"
-                alt="Image 6"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/cea.png"
-                alt="Image 6"
-                class="img-fluid small-image"
-              />
-            </div>
-            <div class="col-lg-1 col-md-4 col-4">
-              <img
-                src="images/logos/dlaseul.png"
-                alt="Image 6"
-                class="img-fluid small-image"
-              />
-            </div>
+      <!-- partenaires -->
+      <div class="container pb-2">
+        <div class="row">
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/copem.png"
+              alt="Image 1"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/logopnm.jpg"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/assomer.png"
+              alt="Image 2"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/capnord.png"
+              alt="Image 3"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/ctm.png"
+              alt="Image 4"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/mairie.png"
+              alt="Image 5"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/dla.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/crpmem.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/efpma.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/dm.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/cea.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/ctmseul.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
           </div>
         </div>
-  
-        <!-- footer 1 -->
-        <div class="container pt-4">
-          <div class="row">
-            <div class="col-lg-4 col-12 mb-5 mb-lg-0">
-              <div class="location-form-wrap">
-                <h6>Géolocalisation</h6>
-  
-                <iframe
-                  class="google-map"
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7720.496712105261!2d-61.14439461673498!3d14.641838611676397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c6aa7192046a813%3A0xf11cedfdb96eb57f!2sASSOCIATION%20DES%20MARINS%20PILOTINS!5e0!3m2!1sfr!2sfr!4v1695159825214!5m2!1sfr!2sfr"
-                  width="100%"
-                  height="80%"
-                  style="border: 0"
-                  allowfullscreen=""
-                  loading="lazy"
-                  referrerpolicy="no-referrer-when-downgrade"
-                ></iframe>
-              </div>
-            </div>
-  
-            <div class="col-lg-5 col-md-6 col-12 mb-4 mb-md-0 mb-lg-0">
-              <h6 class="site-footer-title mb-3">Contact</h6>
-              <p>
-                <strong class="d-inline me-1">Email:</strong>
-                <a href="#">amp@orange.fr</a>
-              </p>
-              <p class="mb-1">
-                <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
-              </p>
-              <p class="mb-1">
-                <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
-              </p>
-              <p>
-                <strong class="d-inline me-2">Site Web:</strong>
-                <a href="#">associationdesmarinspilotins.fr</a>
-              </p>
-            </div>
-  
-            <div class="col-lg-3 col-md-6 col-12">
-              <h6 class="site-footer-title mb-3">Horaires Bureau</h6>
-              <p class="mb-1">
-                <strong class="d-inline me-2">Lundi:</strong> 8h00 à 13h00
-              </p>
-              <p class="mb-1">
-                <strong class="d-inline me-2">Mardi:</strong> 8h00 à 13h00
-              </p>
-              <p class="mb-1">
-                <strong class="d-inline me-2">Jeudi:</strong> 8h00 à 13h00
-              </p>
-              <p class="mb-1">
-                <strong class="d-inline me-2">Vendredi:</strong> 8h00 à 13h00
-              </p>
+      </div>
+
+      <!-- footer 1 -->
+      <div class="container pt-4">
+        <div class="row">
+          <div class="col-lg-4 col-12 mb-5 mb-lg-0">
+            <div class="location-form-wrap">
+              <h6>Géolocalisation</h6>
+
+              <iframe
+                class="google-map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7720.496712105261!2d-61.14439461673498!3d14.641838611676397!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c6aa7192046a813%3A0xf11cedfdb96eb57f!2sASSOCIATION%20DES%20MARINS%20PILOTINS!5e0!3m2!1sfr!2sfr!4v1695159825214!5m2!1sfr!2sfr"
+                width="100%"
+                height="80%"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
-          <!-- / .row  -->
-        </div>
-  
-        <!-- footer BOTTOM -->
-        <div class="container pt-2">
-          <div class="row align-items-center justify-content-center">
-            <!-- copyright -->
-            <div class="col-lg-4 col-12">
-              <p class="copyright-text mb-2">
-                Copyright © <a href="index.html">AMP</a> 2023
-              </p>
-            </div>
-            <!-- icones sociales -->
-            <div class="col-lg-5 col-md-9 col-12 ">
-              <ul class="social-icon d-flex justify-content-center mb-2">
-                <li class="social-icon-item">
-                  <a
-                    href="https://www.instagram.com/associationdesmarinspilotins"
-                    target="_blank"
-                    class="social-icon-link bi-instagram"
-                  ></a>
-                </li>
-  
-                <li class="social-icon-item">
-                  <a
-                    href="https://twitter.com/BergozGuy"
-                    target="_blank"
-                    class="social-icon-link bi-twitter"
-                  ></a>
-                </li>
-  
-                <li class="social-icon-item">
-                  <a
-                    href="https://www.facebook.com/AMP97222"
-                    target="_blank"
-                    class="social-icon-link bi-facebook"
-                  ></a>
-                </li>
-              </ul>
-            </div>
-            <!-- mentions -->
-            <div class="col-lg-3 col-md-3 col-12">
-              <p class="copyright-text mb-0">
-                <a rel="nofollow" href="privacy.html" target="_parent"
-                  >Politique de confidentialité</a
-                >
-                <a rel="nofollow" href="terms.html" target="_parent"
-                  >Conditions d'utilisation</a
-                >
-              </p>
-            </div>
+
+          <div class="col-lg-5 col-md-6 col-12 mb-4 mb-md-0 mb-lg-0">
+            <h6 class="site-footer-title mb-3">Contact</h6>
+            <p>
+              <strong class="d-inline me-1">Email:</strong>
+              <a href="#">amp@orange.fr</a>
+            </p>
+            <p class="mb-1">
+              <strong class="d-inline me-2">Téléhone:</strong> +596 596 52 60 02
+            </p>
+            <p class="mb-1">
+              <strong class="d-inline me-2">Mobile:</strong> +596 696 52 60 02
+            </p>
+            <p>
+              <strong class="d-inline me-2">Site Web:</strong>
+              <a href="#">associationdesmarinspilotins.fr</a>
+            </p>
           </div>
-          <!-- / .row  -->
+
+          <div class="col-lg-3 col-md-6 col-12">
+            <h6 class="site-footer-title mb-3">Horaires Bureau</h6>
+            <p class="mb-1">
+              <strong class="d-inline me-2">Lundi:</strong> 8h00 à 13h00
+            </p>
+            <p class="mb-1">
+              <strong class="d-inline me-2">Mardi:</strong> 8h00 à 13h00
+            </p>
+            <p class="mb-1">
+              <strong class="d-inline me-2">Jeudi:</strong> 8h00 à 13h00
+            </p>
+            <p class="mb-1">
+              <strong class="d-inline me-2">Vendredi:</strong> 8h00 à 13h00
+            </p>
+          </div>
         </div>
-      </footer>
+        <!-- / .row  -->
+      </div>
+
+      <!-- footer BOTTOM -->
+      <div class="container pt-2">
+        <div class="row align-items-center justify-content-center">
+          <!-- copyright -->
+          <div class="col-lg-4 col-12">
+            <p class="copyright-text mb-2">
+              Copyright © <a href="index.html">AMP</a> 2023
+            </p>
+          </div>
+          <!-- icones sociales -->
+          <div class="col-lg-5 col-md-9 col-12">
+            <ul class="social-icon d-flex justify-content-center mb-2">
+              <li class="social-icon-item">
+                <a
+                  href="https://www.instagram.com/associationdesmarinspilotins"
+                  target="_blank"
+                  class="social-icon-link bi-instagram"
+                ></a>
+              </li>
+
+              <li class="social-icon-item">
+                <a
+                  href="https://twitter.com/BergozGuy"
+                  target="_blank"
+                  class="social-icon-link bi-twitter"
+                ></a>
+              </li>
+
+              <li class="social-icon-item">
+                <a
+                  href="https://www.facebook.com/AMP97222"
+                  target="_blank"
+                  class="social-icon-link bi-facebook"
+                ></a>
+              </li>
+            </ul>
+          </div>
+          <!-- mentions -->
+          <div class="col-lg-3 col-md-3 col-12">
+            <p class="copyright-text mb-0">
+              <a rel="nofollow" href="privacy.html" target="_parent"
+                >Politique de confidentialité</a
+              >
+              <a rel="nofollow" href="terms.html" target="_parent"
+                >Conditions d'utilisation</a
+              >
+            </p>
+          </div>
+        </div>
+        <!-- / .row  -->
+      </div>
+    </footer>
 
 
     <!-- fichiers JS -->
