--- a/terms.html
+++ b/terms.html
@@ -270,7 +270,7 @@
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/ctmseul.png"
+              src="images/logos/logopnm.jpg"
               alt="Image 6"
               class="img-fluid small-image"
             />
@@ -298,14 +298,21 @@
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/crpmem.png"
+              src="images/logos/mairie.png"
               alt="Image 5"
               class="img-fluid small-image"
             />
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/mairie.png"
+              src="images/logos/dla.png"
+              alt="Image 6"
+              class="img-fluid small-image"
+            />
+          </div>
+          <div class="col-lg-1 col-md-4 col-4">
+            <img
+              src="images/logos/crpmem.png"
               alt="Image 6"
               class="img-fluid small-image"
             />
@@ -313,13 +320,6 @@
           <div class="col-lg-1 col-md-4 col-4">
             <img
               src="images/logos/efpma.png"
-              alt="Image 6"
-              class="img-fluid small-image"
-            />
-          </div>
-          <div class="col-lg-1 col-md-4 col-4">
-            <img
-              src="images/logos/dla.png"
               alt="Image 6"
               class="img-fluid small-image"
             />
@@ -340,7 +340,7 @@
           </div>
           <div class="col-lg-1 col-md-4 col-4">
             <img
-              src="images/logos/dlaseul.png"
+              src="images/logos/ctmseul.png"
               alt="Image 6"
               class="img-fluid small-image"
             />
