--- a/activites.html
+++ b/activites.html
@@ -342,12 +342,12 @@
               <div class="custom-block custom-block-full">
                 <div class="custom-block-image-wrap">
                   <a
-                    href="images/infos/pro.jpg"
+                    href="images/infos/pro.png"
                     class="custom-block-image-wrap"
                     target="_blank"
                   >
                     <img
-                      src="images/infos/pro.jpg"
+                      src="images/infos/pro.png"
                       class="custom-block-image img-fluid"
                       alt=""
                     />
