--- a/a-propos.html
+++ b/a-propos.html
@@ -280,7 +280,7 @@
                             <div class="custom-block-info">                            
                                 <h5 class="mb-2">
                                     <a href="#">
-                                        Fondateurs
+                                        Nos vétérans
                                     </a>
                                 </h5>
                                 <div class="d-flex flex-column align-items-center pt-2">
