--- a/new.html
+++ b/new.html
@@ -27,7 +27,7 @@
   <body>
     <div class="container">
       <div class="login-box">
-        <form action="#">
+        <form method="post" action="#">
           <div class="page-box">
             <div class="login-title">
               <a href="index.html"
