--- a/activites.html
+++ b/activites.html
@@ -722,6 +722,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/owl.carousel.min.js"></script>
+    <script src="assets/js/prefixfree.min.js"></script>
     <script src="assets/js/script.js"></script>
   </body>
 </html>
