--- a/privacy.html
+++ b/privacy.html
@@ -78,7 +78,7 @@
 
 
         <!--Section Banniere-->
-        <section class="hero-section5">
+        <section class="banniere5">
           <div class="container">
               <div class="row">
                   
@@ -91,6 +91,9 @@
                   </div>
 
               </div><!-- / .row  -->
+              <div id="poisson">
+                <img src="assets/images/logos/1.png" alt="Poisson">                  
+              </div>
           </div>
       </section>
 
