--- a/services.html
+++ b/services.html
@@ -82,7 +82,7 @@
         </nav>
 
         <!-- Section BANNIERE -->
-        <section class="hero-section3">
+        <section class="banniere3">
             <div class="container">
                 <div class="row">
 
@@ -135,6 +135,9 @@
                     </div>
 
                 </div><!-- / .row  -->
+                <div id="poisson">
+                  <img src="assets/images/logos/1.png" alt="Poisson">                  
+                </div>
             </div>
         </section>
 
