--- a/a-propos.html
+++ b/a-propos.html
@@ -81,7 +81,7 @@
         </nav>
 
         <!--Section Banniere-->
-        <section class="hero-section4">
+        <section class="banniere4">
             <div class="container">
                 <div class="row">
                     
