--- a/actions.html
+++ b/actions.html
@@ -82,7 +82,7 @@
         </nav>
 
         <!--Section Banniere-->
-        <section class="hero-section1">
+        <section class="banniere1">
             <div class="container">
                 <div class="row">
                     
