--- a/activites.html
+++ b/activites.html
@@ -117,7 +117,7 @@
       </nav>
 
       <!--Section Banniere-->
-      <section class="hero-section2">
+      <section class="banniere2">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-12">
@@ -130,9 +130,10 @@
                 </h4>
               </div>
             </div>
-          </div><!-- / .row  -->
+          </div>
+          <!-- / .row  -->
           <div id="poisson">
-            <img src="assets/images/logos/1.png" alt="Poisson">                  
+            <img src="assets/images/logos/1.png" alt="Poisson" />
           </div>
         </div>
       </section>
