--- a/actualites.html
+++ b/actualites.html
@@ -115,7 +115,7 @@
       </nav>
 
       <!--Section Banniere avec differentes captures-->
-      <section class="hero-section2">
+      <section class="banniere2">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-12">
@@ -210,6 +210,9 @@
             </div>
           </div>
           <!-- / .row  -->
+          <div id="poisson">
+            <img src="assets/images/logos/1.png" alt="Poisson">                  
+          </div>
         </div>
       </section>
 
