--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
       </nav>
 
       <!--Section Banniere-->
-      <section class="hero-section6">
+      <section class="banniere6">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-12">
@@ -131,7 +131,7 @@
           </div>
           <!-- / .row  -->
           <div id="poisson">
-            <img src="assets/images/logos/1.png" alt="Poisson">                  
+            <img src="assets/images/logos/1.png" alt="Poisson" />
           </div>
         </div>
       </section>
