--- a/index.html
+++ b/index.html
@@ -15,14 +15,17 @@
 
     <!-- Fichiers CSS -->
     <!-- Fichiers CSS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/bootstrap-icons.css">
-    <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&family=Sono:wght@200;300;400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="assets/css/bootstrap-icons.css" />
+    <link rel="stylesheet" href="assets/css/owl.carousel.min.css" />
+    <link rel="stylesheet" href="assets/css/owl.theme.default.min.css" />
+    <link href="assets/css/style.css" rel="stylesheet" />
   </head>
 
   <body>
@@ -114,7 +117,7 @@
       </nav>
 
       <!--Section Banniere-->
-      <section class="hero-section">
+      <section class="banniere">
         <div class="container">
           <div class="row">
             <div class="col-lg-12 col-12">
@@ -213,6 +216,9 @@
             </div>
           </div>
           <!-- / .row  -->
+          <div id="poisson">
+            <img src="assets/images/logos/1.png" alt="Poisson">                  
+          </div>
         </div>
       </section>
 
