--- a/terms.html
+++ b/terms.html
@@ -113,7 +113,7 @@
     </nav>
 
     <!--Section Banniere-->
-    <section class="hero-section5">
+    <section class="banniere5">
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-12">
@@ -125,6 +125,9 @@
           </div>
         </div>
         <!-- / .row  -->
+        <div id="poisson">
+          <img src="assets/images/logos/1.png" alt="Poisson">                  
+        </div>
       </div>
     </section>
 
