--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
   <body>
     <div class="container">
       <div class="login-box">
-        <form action="#">
+        <form action="new_page.html">
           <div class="page-box">
             <div class="login-title">
               <a href="index.html"
